# askgit

./: .gitignore  Dockerfile  LINUX-SETUP.md  Makefile  README.md  chat.sh  entrypoint.sh  index.html  pyproject.toml  requirements.txt
server/: main.py  requirements.txt
