[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askgit"
version = "0.1.0"
description = "An AI-powered Git tutor in your terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
askgit = "askgit.main:main"
